[FIX] bars and tasks alignement

--- a/src/Chart/Chart.css
+++ b/src/Chart/Chart.css
@@ -7,7 +7,7 @@
 }
 
 .bar {
-    top: 172px;
+    top: 165px;
     position: relative;
     margin: 3px;
     padding-top: 4px;
